5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1585_2895.log
== TEST (2019-03-21 11:53:08) 
-- CODE:
input(float("quantidade"))
input(float("valor"))
input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:53:28) 
-- CODE:
input(float("quantidade"))
input(float("valor"))
input(float("frete"))

total=quantidade*valor*frete

print(total)

-- EXECUTION TIME:
0.159674
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 1, in <module>
    input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:32) 
-- CODE:
input(float("quantidade"))
input(float("valor"))
input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:54:21) 
-- CODE:
input(int("quantidade"))
input(int("valor"))
input(int("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(int("quantidade"))
ValueError: invalid literal for int() with base 10: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:55:58) 
-- CODE:
print(input(float("quantidade")))
print(input(float("valor")))
print(input(float("frete")))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(input(float("quantidade")))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:56:23) 
-- CODE:
print(float("quantidade"))
print(float("valor"))
print(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:06) 
-- CODE:
var=input(float("quantidade"))
var=input(float("valor"))
var=input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:44) 
-- CODE:
input(float("quantidade"))
input(float("valor"))
input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:27:11) 
-- CODE:
input(float("quantidade"))
input(float("valor"))
input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:28:21) 
-- CODE:
input(int("quantidade"))
input(int("valor"))
input(int("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(int("quantidade"))
ValueError: invalid literal for int() with base 10: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:28:50) 
-- CODE:
input(float("quantidade"))
input(float("valor"))
input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:28:55) 
-- CODE:
input(float("quantidade"))
input(float("valor"))
input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:28:57) 
-- CODE:
input(float("quantidade"))
input(float("valor"))
input(float("frete"))

total=quantidade*valor*frete

print(total)

-- EXECUTION TIME:
0.197845
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 1, in <module>
    input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:31:17) 
-- CODE:
valor=input(float("quantidade"))
valor=input(float("valor"))
valor=input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:08) 
-- CODE:
var=input(float("quantidade"))
var=input(float("valor"))
var=input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:33:10) 
-- CODE:
5.0=input(float("quantidade"))
100.0=input(float("valor"))
40.0=input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 1
    5.0=input(float("quantidade"))
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:33:26) 
-- CODE:
5=input(float("quantidade"))
100=input(float("valor"))
40=input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 1
    5=input(float("quantidade"))
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:34:21) 
-- CODE:
var=input(float("quantidade"))
var=input(float("valor"))
vare=input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:42:10) 
-- CODE:
var=input(float("quantidade"))
var=input(float("valor"))
var=input(float("frete"))

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=input(float("quantidade"))
ValueError: could not convert string to float: 'quantidade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:42:32) 
-- CODE:
var=input(float(quantidade))
var=input(float(valor))
var=input(float(frete)

total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 5
    total=quantidade*valor*frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:43:11) 
-- CODE:
var=input(float(quantidade))
var=input(float(valor))
var=input(float(frete)

preco total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 5
    preco total=quantidade*valor*frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:43:14) 
-- CODE:
var=input(float(quantidade))
var=input(float(valor))
var=input(float(frete)

preco total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 5
    preco total=quantidade*valor*frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:43:23) 
-- CODE:
var=input(float(quantidade))
var=input(float(valor))
var=input(float(frete)

preco total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 5
    preco total=quantidade*valor*frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:43:23) 
-- CODE:
var=input(float(quantidade))
var=input(float(valor))
var=input(float(frete)

preco total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 5
    preco total=quantidade*valor*frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:43:24) 
-- CODE:
var=input(float(quantidade))
var=input(float(valor))
var=input(float(frete)

preco total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 5
    preco total=quantidade*valor*frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:43:38) 
-- CODE:
var=input(float(quantidade))
var=input(float(valor))
var=input(float(frete)

total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 5
    total=quantidade*valor*frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:44:21) 
-- CODE:
var=input(float(quantidade))
var=input(float(valor))
var=input(float(frete)

input(total=quantidade*valor*frete)

print(total)

-- ERROR:
File "XXXX", line 5
    input(total=quantidade*valor*frete)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:46:12) 
-- CODE:
var=input(float("quantidade"))
var=input(float("valor"))
var=input(float("frete")

total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 5
    total=quantidade*valor*frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:46:16) 
-- CODE:
var=input(float("quantidade"))
var=input(float("valor"))
var=input(float("frete")

total=quantidade*valor*frete

print(total)

-- ERROR:
File "XXXX", line 5
    total=quantidade*valor*frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:49:33) 
-- CODE:
quantidade=input("digite a quantidade")
valor=input("digite o valor")
frete=input("digite o frete")

total=quantidade*valor*frete

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=quantidade*valor*frete
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:50:40) 
-- CODE:
quantidade=float(input("digite a quantidade"))
valor=float(input("digite o valor"))
frete=float(input("digite o frete"))

total=quantidade*valor*frete

print(total)

-- OUTPUT:
42120.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:51:41) 
-- CODE:
quantidade=float(input("digite a quantidade"))
valor=float(input("digite o valor"))
frete=float(input("digite o frete"))

total=quantidade*valor+frete

print(total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:51:51) 
-- CODE:
quantidade=float(input("digite a quantidade"))
valor=float(input("digite o valor"))
frete=float(input("digite o frete"))

total=quantidade*valor+frete

print(total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:52:05) 
-- CODE:
quantidade=float(input("digite a quantidade"))
valor=float(input("digite o valor"))
frete=float(input("digite o frete"))

total=quantidade*valor+frete

print(total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:52:15) 
-- CODE:
quantidade=float(input("digite a quantidade"))
valor=float(input("digite o valor"))
frete=float(input("digite o frete"))

total=quantidade*valor+frete

print(total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:52:19) 
-- CODE:
quantidade=float(input("digite a quantidade"))
valor=float(input("digite o valor"))
frete=float(input("digite o frete"))

total=quantidade*valor+frete

print(total)

-- EXECUTION TIME:
0.172616
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
